{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 52,
  "lineage": "ea22812c-add0-96cd-1b32-9abb15012625",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "app_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-11T02:09:47.258-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ucraft-346808/global/firewalls/ssh-firewall",
            "log_config": [],
            "name": "ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/networks/main-vpc",
            "priority": 1000,
            "project": "ucraft-346808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/firewalls/ssh-firewall",
            "source_ranges": [
              "10.0.0.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "app_https_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-11T02:09:46.761-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ucraft-346808/global/firewalls/https-firewall",
            "log_config": [],
            "name": "https-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/networks/main-vpc",
            "priority": 1000,
            "project": "ucraft-346808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/firewalls/https-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-11T02:09:47.323-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ucraft-346808/global/firewalls/bastion-firewall",
            "log_config": [],
            "name": "bastion-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/networks/main-vpc",
            "priority": 1000,
            "project": "ucraft-346808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/firewalls/bastion-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion",
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220406",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/zones/europe-west3-a/disks/bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ucraft-346808/zones/europe-west3-a/instances/bastion",
            "instance_id": "2552815266970581436",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "UtfjULJNEe0=",
            "metadata_startup_script": "cat C:/Users/Geosimonyan/.ssh/ucraft_id_rsa.pub \u003e\u003e ~/.ssh/authorized_keys",
            "name": "bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.226.240",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/networks/main-vpc",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/regions/europe-west3/subnetworks/mgmt",
                "subnetwork_project": "ucraft-346808"
              }
            ],
            "project": "ucraft-346808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/zones/europe-west3-a/instances/bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion",
              "ssh"
            ],
            "tags_fingerprint": "qcje_QyhJGU=",
            "zone": "europe-west3-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "juice-shop-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220406",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/zones/europe-west3-a/disks/juice-shop-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ucraft-346808/zones/europe-west3-a/instances/juice-shop-0",
            "instance_id": "3769944849025748274",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "_OIeZSxvNxw=",
            "name": "juice-shop-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.81.119",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/networks/main-vpc",
                "network_ip": "10.0.0.34",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/regions/europe-west3/subnetworks/app",
                "subnetwork_project": "ucraft-346808"
              }
            ],
            "project": "ucraft-346808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/zones/europe-west3-a/instances/juice-shop-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "https"
            ],
            "tags_fingerprint": "lXgUFqhTjIE=",
            "zone": "europe-west3-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "juice-shop-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220406",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/zones/europe-west3-a/disks/juice-shop-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ucraft-346808/zones/europe-west3-a/instances/juice-shop-1",
            "instance_id": "4931130828487806258",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "_OIeZSxvNxw=",
            "name": "juice-shop-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.207.173",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/networks/main-vpc",
                "network_ip": "10.0.0.35",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/regions/europe-west3/subnetworks/app",
                "subnetwork_project": "ucraft-346808"
              }
            ],
            "project": "ucraft-346808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/zones/europe-west3-a/instances/juice-shop-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "https"
            ],
            "tags_fingerprint": "lXgUFqhTjIE=",
            "zone": "europe-west3-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/ucraft-346808/global/networks/main-vpc",
            "mtu": 1460,
            "name": "main-vpc",
            "project": "ucraft-346808",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/networks/main-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-11T02:09:48.910-07:00",
            "gateway_address": "10.0.0.33",
            "id": "projects/ucraft-346808/regions/europe-west3/subnetworks/app",
            "ip_cidr_range": "10.0.0.32/28",
            "name": "app",
            "network": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/networks/main-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ucraft-346808",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/regions/europe-west3/subnetworks/app",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-11T02:09:47.759-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/ucraft-346808/regions/europe-west3/subnetworks/mgmt",
            "ip_cidr_range": "10.0.0.0/28",
            "name": "mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/global/networks/main-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ucraft-346808",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ucraft-346808/regions/europe-west3/subnetworks/mgmt",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main-vpc"
          ]
        }
      ]
    }
  ]
}